--- a/views/components/header-home.ejs
+++ b/views/components/header-home.ejs
@@ -22,7 +22,7 @@
             <img src="assets/icons/trainIcon.svg" alt="train" class="menu">
         </button>
         <% if (!trainUnlocked) { %>
-            <span class="train-lock-tooltip">Add 6+ memories to unlock</span>
+            <span class="train-lock-tooltip">6+ memories to unlock</span>
         <% } %>
     </div>
     <button onclick="window.location.href='/all-memory'" class="menu-button">
