--- a/public/css/train.css
+++ b/public/css/train.css
@@ -19,8 +19,8 @@
     opacity: 0;
     position: absolute;
     bottom: calc(100% + 10px);
-    left: 50%;
-    transform: translateX(-50%);
+    /* left: 50%; */
+    transform: translateX(-10px);
     padding: 8px 12px;
     background-color: var(--color-gray);
     color: var(--color-white);
