--- a/views/edit-island.ejs
+++ b/views/edit-island.ejs
@@ -159,9 +159,11 @@
                                                 <p class="memo-date">
                                                     <%= memory.date || '' %>
                                                 </p>
+                                                <% if (memory.title) { %>
                                                 <p class="memo-title">
-                                                    <%= memory.title || 'Untitled' %>
+                                                    <%= memory.title %>
                                                 </p>
+                                                <% } %>
                                                 <p class="memo-description">
                                                     <%= memory.description || '' %>
                                                 </p>
