--- a/views/island.ejs
+++ b/views/island.ejs
@@ -43,9 +43,9 @@
     </div>
   </div>
   
-  <div id="footer-add-island-container">
+  <!-- <div id="footer-add-island-container">
     <%- include('components/footer-add-island.ejs') %>
-  </div>
+  </div> -->
   <div id="footer-add-memory-container" style="display: none;">
     <%- include('components/footer-add-memory.ejs') %>
   </div>
