--- a/views/login.ejs
+++ b/views/login.ejs
@@ -11,7 +11,7 @@
 <body>
     <div class="main-body">
     <div class="form-container">
-        <%- include('components/header.ejs') %>
+        <%- include('components/header-login.ejs') %>
                 <h1>LOGIN</h1>
                 <a href="/signup">/SIGNUP</a>
                 <form method="POST" action="/login" class="login-form">
