--- a/views/islands.ejs
+++ b/views/islands.ejs
@@ -122,7 +122,7 @@
               ${memory.imgSrc && memory.imgSrc.length > 0 ? 
                 `<img src="${Array.isArray(memory.imgSrc) ? memory.imgSrc[0] : memory.imgSrc}" alt="memory" class="memory-thumbnail">` : ''}
               <div class="memory-info">
-                <p class="memory-title">${memory.title || 'Untitled'}</p>
+                ${memory.title ? `<p class="memory-title">${memory.title}</p>` : ''}
                 <p class="memory-date">${memory.date || 'No date'}</p>
               </div>
             </div>
@@ -157,7 +157,7 @@
               ${memory.imgSrc && memory.imgSrc.length > 0 ? 
                 `<img src="${Array.isArray(memory.imgSrc) ? memory.imgSrc[0] : memory.imgSrc}" alt="memory" class="memory-thumbnail">` : ''}
               <div class="memory-info">
-                <p class="memory-title">${memory.title || 'Untitled'}</p>
+                ${memory.title ? `<p class="memory-title">${memory.title}</p>` : ''}
                 <p class="memory-date">${memory.date || 'No date'}</p>
               </div>
             </div>
